# bls-permissions

./: .gitignore  Cargo.toml  README.md
crates/bls-permissions/: Cargo.toml
crates/bls-permissions/src/: error.rs  lib.rs  path_utils.rs  prompter.rs
crates/bls-permissions/src/terminal/: colors.rs  mod.rs
crates/browser/: Cargo.toml  index.js  module.js  package.json  permissions.js
crates/browser/src/: error.rs  html.rs  lib.rs  macros.rs  prompter.rs
crates/deno/: Cargo.toml
crates/deno/src/: lib.rs  prompter.rs
tests/browser/: browser_permissions.wasm  prompter.html
