[workspace]
resolver = "2"
members = [
    "crates/deno",
    "crates/browser",
    "crates/bls-permissions",
]

[workspace.package]
authors = ["joinhack@gmail.com"]
edition = "2021"
license = "MIT"
description = "Provides the permissions implementation."
repository = "https://github.com/blocklessnetwork/bls-permissions"

[workspace.dependencies]
anyhow = "1.0.57"
deno_core = { version = "0.299.0" }
deno_path_util = "=0.2.0"
deno_terminal = "0.2.0"
libc = "0.2.126"
log = "0.4.20"
fqdn = "0.3.4"
serde = { version = "1.0.149", features = ["derive"] }
url = { version = "< 2.5.0", features = ["serde", "expose_internals"] }
once_cell = "1.17.1"
which = "4.2.5"
bls-permissions = {path = "crates/bls-permissions"}
parking_lot = "0.12.0"