[package]
name = "bls-permissions"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Provides the deno permissions implementation."


[dependencies]
anyhow.workspace = true
fqdn.workspace = true
serde.workspace = true
url.workspace = true
which.workspace = true
once_cell.workspace = true
log.workspace = true
parking_lot.workspace = true