[package]
name = "bls-permissions"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Provides the deno permissions implementation."


[dependencies]
anyhow.workspace = true
fqdn.workspace = true
serde.workspace = true
url.workspace = true
once_cell.workspace = true
log.workspace = true
parking_lot.workspace = true
libc.workspace = true
serde_json.workspace = true
percent-encoding.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
which.workspace = true

[dev.dependencies]
serde.workspace = true

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["commapi", "knownfolders", "mswsock", "objbase", "psapi", "shlobj", "tlhelp32", "winbase", "winerror", "winuser", "winsock2", "processenv", "wincon", "wincontypes"] }