[package]
name = "bls-permissions"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Provides the deno permissions implementation."


[dependencies]
anyhow.workspace = true
fqdn.workspace = true
serde.workspace = true
url.workspace = true
once_cell.workspace = true
log.workspace = true
parking_lot.workspace = true
libc.workspace = true
serde_json.workspace = true
percent-encoding.workspace = true
thiserror.workspace = true
termcolor = { version = "1.1.3"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
which.workspace = true

[dev-dependencies]
serde.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm)'] }